--- a/client-system/src/app/app.component.html
+++ b/client-system/src/app/app.component.html
@@ -1,17 +1,54 @@
-<h2 class="mt-3">Bank</h2>
-<!-- <div *ngFor="let currency of currencies">
-  <div class="row mb-3">
-    <label class="col-md-2">Name currency:</label>
-    <div class="col-md-6">{{ currency.name_currency }}</div>
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Bank</span>
+    <span class="spacer"></span>
+    <button (click)="drawer.toggle()">
+      <mat-icon svgIcon="button_add" class="toolbar-icon"></mat-icon>
+    </button>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-drawer-container class="example-container" autosize>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="currencies" class="mat-elevation-z8">
+      <ng-container matColumnDef="code_currency">
+      <th mat-header-cell *matHeaderCellDef> Code currency </th>
+      <td mat-cell *matCellDef="let currency"> {{currency.code_currency}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="name_currency">
+      <th mat-header-cell *matHeaderCellDef> Name currency </th>
+      <td mat-cell *matCellDef="let currency"> {{currency.name_currency}} </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="dispalyedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: dispalyedColumns;"></tr>
+    </table>
   </div>
-</div>
- 
-<h3>Create a new currency:</h3>
- 
-<div class="row mb-1">
-  <label class="col-md-3">Enter your currency:</label>
-  <div class="col-md-9 mb-1"><input type="text" name="name_currency" [(ngModel)]="new_currency.name_currency"></div>
-  <div class="col-md-2 offset-3">
-    <button (click)="createCurrency()" class="btn btn-primary">Save</button>
-  </div>
-</div> -->
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <mat-list role="list">
+      <mat-list-item role="listitem">  
+        <div>
+          Name of currency
+          <input type="text" name="name_currency" [(ngModel)]="new_currency.name_currency">
+        </div>
+        <span class="spacer"></span>
+        <div>
+          <button mat-raised-button color="primary"
+            (click)="createCurrency()" class="btn btn-primary">Save</button>
+        </div>
+      </mat-list-item>
+      <mat-list-item role="listitem">
+        <div>
+          Code of currency
+          <input type="number" name="code_currency" [(ngModel)]="new_currency.code_currency">
+        </div>
+        <span class="spacer"></span>
+        <div>
+          <button mat-raised-button color="warn" 
+            (click)="deleteCurrency()">Delete</button>
+        </div>
+      </mat-list-item>
+  </mat-list>
+  </mat-drawer>
+</mat-drawer-container>
