--- a/client-system/src/app/app.component.css
+++ b/client-system/src/app/app.component.css
@@ -1,23 +1,10 @@
-.spacer {
-    flex: 1 1 auto;
-}  
-
 table {
     width: 100%;
 }
   
-.mat-form-field {
-    font-size: 14px;
-    width: 70%;
-}
   
 td, th {
     width: 25%;
-}
-
-.toolbar-icon {
-    height: 24px;
-    width: 24px;
 }
 
 button {
@@ -26,25 +13,22 @@ button {
     background: transparent
 }
 
-.example-form-field {
-    width: 200px;
-  }
-
-.example-container {
+.container {
     width: 100%;
     height: 100%;
     overflow: hidden;
     background: white;
 }
-  
-.example-sidenav-content {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-}
-  
-.example-sidenav {
+
+.sidenav {
     padding: 20px;
 }
+
+.toolbar-icon {
+    height: 24px;
+    width: 24px;
+}
   
+.spacer {
+    flex: 1 1 auto;
+}  
