--- a/client-system/src/app/app.component.html
+++ b/client-system/src/app/app.component.html
@@ -8,7 +8,7 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
-<mat-drawer-container class="example-container" autosize>
+<mat-drawer-container class="container" autosize>
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="currencies" class="mat-elevation-z8">
       <ng-container matColumnDef="code_currency">
@@ -25,7 +25,7 @@
       <tr mat-row *matRowDef="let row; columns: dispalyedColumns;"></tr>
     </table>
   </div>
-  <mat-drawer #drawer class="example-sidenav" mode="side">
+  <mat-drawer #drawer class="sidenav" mode="side">
     <mat-list role="list">
       <mat-list-item role="listitem">  
         <div>
